Bugfixing currency icon positioning on smaller screens

--- a/BTCPayServer/wwwroot/css/normalizer.css
+++ b/BTCPayServer/wwwroot/css/normalizer.css
@@ -9883,6 +9883,17 @@ strong {
         border-right: 1px solid rgba(0, 0, 0, 0.1);
     }
 
+.qr_currency_icon {
+    height: 64px;
+    width: 64px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+
 /* Warning Page */
 .manual__step-two--warning {
     display: block;
